# dag-partitioning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Bisection/: CMakeLists.txt
Bisection/include/: Bisection.h  GreedyDirectedGraphGrowing.h  UndirectedFix.h
Bisection/src/: Bisection.cpp  GreedyDirectedGraphGrowing.cpp  UndirectedFix.cpp
Clustering/: CMakeLists.txt
Clustering/include/: Clustering.h  ClusteringCycleDetection.h  ClusteringForbiddenEdges.h  ClusteringHybrid.h
Clustering/src/: Clustering.cpp  ClusteringCycleDetection.cpp  ClusteringForbiddenEdges.cpp  ClusteringHybrid.cpp
Driver/: CMakeLists.txt
Driver/include/: RecursivePartitioner.h
Driver/src/: RecursivePartitioner.cpp
Graph/: CMakeLists.txt
Graph/include/: Graph.h
Graph/src/: Graph.cpp
InitialPartitioning/: CMakeLists.txt
InitialPartitioning/include/: GreedyDirectedGraphGrowing.h
InitialPartitioning/src/: GreedyDirectedGraphGrowing.cpp
MultilevelBisectioner/: CMakeLists.txt
MultilevelBisectioner/include/: MultilevelBisectioner.h
MultilevelBisectioner/src/: MultilevelBisectioner.cpp
Refinement/: CMakeLists.txt
Refinement/include/: BoundaryFM.h  BoundaryKL.h  Refinement.h
Refinement/src/: BoundaryFM.cpp  BoundaryKL.cpp  Mixed.cpp  Refinement.cpp
cmake/: Dependencies.cmake  GKlib.cmake  Install.cmake  METIS.cmake  RobinHood.cmake  SCOTCH.cmake  dag_partitioningConfig.cmake.in  scotch.cmake
src/: CMakeLists.txt
src/Bisection/: CMakeLists.txt
src/Bisection/include/: Bisection.h  GreedyDirectedGraphGrowing.h  UndirectedFix.h
src/Bisection/src/: Bisection.cpp  GreedyDirectedGraphGrowing.cpp  UndirectedFix.cpp
src/Clustering/: CMakeLists.txt
src/Clustering/include/: Clustering.h  ClusteringCycleDetection.h  ClusteringForbiddenEdges.h  ClusteringHybrid.h
src/Clustering/src/: Clustering.cpp  ClusteringCycleDetection.cpp  ClusteringForbiddenEdges.cpp  ClusteringHybrid.cpp
src/Driver/: CMakeLists.txt
src/Driver/include/: MultilevelBisectioner.h  RecursivePartitioner.h
src/Driver/src/: MultilevelBisectioner.cpp  RecursivePartitioner.cpp
src/Graph/: CMakeLists.txt
src/Graph/include/: Graph.h
src/Graph/src/: Graph.cpp
src/Refinement/: CMakeLists.txt
src/Refinement/include/: BoundaryFM.h  BoundaryKL.h  Mixed.h  Refinement.h  RefinementWrapper.h
src/Refinement/src/: BoundaryFM.cpp  BoundaryKL.cpp  Mixed.cpp  Refinement.cpp  RefinementWrapper.cpp
src/Scheduling/: CMakeLists.txt
src/Scheduling/include/: HyperGraph.h  Scheduling.h  Utils.h
src/Scheduling/src/: HyperGraph.cpp  Scheduling.cpp  Utils.cpp
test/: TEST.md  dag.dot.nodemappings  rand-dag  rand-dag.cpp  run-compare.py  run-memprof.py  test.cpp  test.sh  trace-current.csv  trace-current.txt  trace-dagp.csv  trace-dagp.txt
